--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Euro 2020 Score Predictor"
+      content="World Cup Score Predictor"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Euro Predictor!</title>
+    <title>World Cup Predictor!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
