--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>World Cup Predictor!</title>
   </head>
-  <body>
+  <body style="background-color: #FAF8FA">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
